--- a/public_html/index.html
+++ b/public_html/index.html
@@ -185,7 +185,7 @@
             <h1>CONTACT US</h1>
             <p class="mb-5">If you have some Questions or need Help! Please Contact Us! <br> 
             </p>
-           <h2><b>PHONE NUMBER : 999999999</b></h2>
+           <h2><b>PHONE NUMBER : 9599206200</b></h2>
            </p> 
             <!-- Contact form -->
                    
@@ -193,7 +193,7 @@
     </section><!-- End of Contact Section -->   
 
     <!-- Section -->
-    <section class="pb-0">
+   <!--<section class="pb-0">
         <!-- Container -->
         <div class="container">
             <!-- Pre footer -->
@@ -247,7 +247,7 @@
                     </li>
                 </ul> 
             </div><!-- End of Pre footer -->            
-
+ --> 
             <!-- foooter -->
             <footer class="footer">            
                 <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com">DevCRUD</a></p>
