--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
             <!-- foooter -->
             <footer class="footer">            
-                <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com">DevCRUD</a></p>
+                <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy;</p>
             </footer><!-- End of Footer-->  
             
         </div><!--End of Container -->      
