--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Brijesh">
     <title>RNI Registration | Shree Balaji Consultancy</title>
 
-    <!-- font icons -->
+    <!-- font icons --->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
 
     <!-- Bootstrap + Creative Design main styles -->
